Fixed loading view overlapped widget label. (5408)

--- a/css/personalizedContent/styles.less
+++ b/css/personalizedContent/styles.less
@@ -163,11 +163,6 @@
 			min-height : 180px;
 		}
 
-		.spinner-container {
-			position: absolute;
-			width: 100%;
-			top: 180px;
-		}
 	}
 
 }
